--- a/style.css
+++ b/style.css
@@ -5,8 +5,24 @@ body {
 .header {
     text-align: center;
     font-family: Abril;
+    font-size: 60px;
     }
+.navigation{
+    text-align: center;
+    color:black;
+}
  ul#menu li {
     display: inline-block;
-    text-align: center;
+    font-size: 20px;
+    padding: 10px;
+    }
+a {
+    color: #777;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+}
+.newspaper-container {
+    width: 700px;
+    margin: 500px;
+    border-radius: 25px;
 }
