--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 body {
-    background-color: #eee;
+    background-color: lightgray;
 }
 .header {
     text-align: center;
@@ -23,6 +23,7 @@ a {
 }
 .newspaper-container {
     width: 700px;
-    margin: 500px;
+    margin: auto;
     border-radius: 25px;
+    background-color: #eee;
 }
