--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto+Slab:wght@500&family=Source+Sans+Pro:wght@200;400;600&display=swap');
 body {
-    background-color: lightgray;
+    background-color: #eee;
 }
 .header {
     text-align: center;
     font-family: Abril;
-    font-size: 60px;
+    font-size: 300%;
     }
 .navigation{
     text-align: center;
     color:black;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
 }
  ul#menu li {
     display: inline-block;
-    font-size: 15px;
-    padding: 5px;
+    font-size: 70%;
+    padding: 1%;
     }
 a {
     color: #777;
@@ -22,8 +24,17 @@ a {
     text-decoration: none;
 }
 .newspaper-container {
-    width: 700px;
+    max-width: 700px;
     margin: auto;
     border-radius: 25px;
-    background-color: #eee;
+    background-color: white;
+    box-shadow: #ddd;
+    padding-left: 1em;
+    padding-right: 1em;
+    padding-top: .5em;
+    padding-bottom: .5em;
+}
+.date{
+    padding-top: 20px;
+    padding-left: 20px;
 }
