--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
 }
 .header {
     text-align: center;
-    font-family: Abril;
+    font-family: Abril Fatface;
     font-size: 300%;
     }
 .navigation{
@@ -12,7 +12,7 @@ body {
     color:black;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
-}
+    }
  ul#menu li {
     display: inline-block;
     font-size: 70%;
@@ -38,3 +38,41 @@ a {
     padding-top: 20px;
     padding-left: 20px;
 }
+#front-page-pic {
+    display: block;
+    width: 100%;
+    margin: auto;
+}
+main {
+    width: 100%;
+    margin: auto;
+}
+.article-text {
+    width: 100%;
+    margin: auto;
+    text-align: justify;
+}
+p {
+    font-family: Source Sans Pro;
+    padding-top: 1em;
+}
+.article-title {
+    font-family: Roboto Slab;
+}
+h5 {
+    color: #dd3232;
+}
+.column {
+    display: inline-block;
+    width: 40%;
+    margin: auto;
+    padding: 1.5em;
+}
+#more-articles-pics {
+    display: block;
+    width: 100%;
+    margin: auto;
+}
+
+
+
