--- a/style.css
+++ b/style.css
@@ -73,6 +73,15 @@ h5 {
     width: 100%;
     margin: auto;
 }
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+.grid-item{
+    width: 75%;
+    padding: 0.5em;
+
+}
 
 
 
